# fraud-detection

./: .dockerignore  .gitignore  README.md  dvc.yaml  init_setup.sh  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci.yml
config/: data.yaml  features.yaml  paths.yaml  profile.yaml
dashboard/: app.py
data/processed/: .gitignore
models/ecommerce/: xgboost_best_model.pkl
notebooks/: credit_card_eda_freature_engineering.ipynb  credit_card_fraud_modeling.ipynb  ecommerce_eda_freature_engineering.ipynb  ecommerce_fraud_modeling.ipynb  eda_and_data_processing.ipynb  eda_creditcard.ipynb  explainability.ipynb  fraud_modeling.ipynb  modeling.ipynb  transaction_modeling.ipynb
scripts/: run_api.sh  run_data_pipeline.py  run_ecommerce_training.py  run_pipeline.py  run_pipeline.sh  run_runing.py  run_training.py  run_training.sh
src/fraud_detection/analysis/: eda.py
src/fraud_detection/core/: settings.py
src/fraud_detection/data/: cleaning.py  ip_geolocation.py  loader.py
src/fraud_detection/explainability/: feature_importance.py  predictions.py  shap_explainer.py
src/fraud_detection/features/: custom_features.py  feature_builder.py  pipeline.py  preprocessing.py
src/fraud_detection/models/: compare.py  evaluation.py  metrics.py  persistence.py  pipeline.py  register.py  tracker.py  train.py  tuning.py
src/fraud_detection/utils/: helpers.py  mlflow_tracking.py
src/fraud_detection/viz/: importance_plots.py  model_plots.py  plots.py
tests/: conftest.py  test_data_handler.py  test_data_pipeline.py  test_evaluation.py  test_feature.py  test_feature_importance.py  test_model_training.py  test_pipeline.py  test_tuning.py
