[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud_detection"
version = "0.1.0"
description = "End-to-end fraud detection system for e-commerce and financial transactions"
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = { text = "MIT" }

authors = [
    { name = "Tibebu K.", email = "wise.tibec@gmail.com" }
]

keywords = [
    "fraud_detection",
    "machine-learning",
    "fintech",
    "e-commerce",
    "banking",
    "mlops",
    "fastapi",
    "xai",
    "shap"
]

classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries"
]

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "imbalanced-learn",
    "mlflow",
    "dvc",
    "dvc-s3",
    "fastapi",
    "uvicorn",
    "pydantic",
    "python-dotenv",
    "pyyaml",
    "joblib",
    "xgboost",
    "lightgbm",
    "shap",
    "matplotlib",
    "seaborn"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "pre-commit",
    "mypy",
    "codecov"
]

fast = [
    "rapidfuzz"
]

[project.urls]
Homepage = "https://github.com/tib-dev/fraud_detection"
Documentation = "https://github.com/tib-dev/fraud_detection/docs"
Source = "https://github.com/tib-dev/fraud_detection"

[tool.setuptools.packages.find]
where = ["src"]
include = ["fraud_detection*"]

[tool.black]
line-length = 88
target-version = ["py312"]

exclude = '''
/(
    \.venv
  | \.git
  | \.dvc
  | mlruns
  | data
)/
'''

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "mlruns",
    "data"
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --cov=fraud_detection"
testpaths = ["tests"]

[tool.coverage.run]
source = ["fraud_detection"]
omit = [
    "tests/*",
    "src/fraud_detection/api/*"
]
